--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+    implementation 'io.minio:minio:8.5.13'
     implementation "jakarta.mail:jakarta.mail-api:${mailVersion}"
 	implementation "com.sun.mail:jakarta.mail:${mailVersion}"
 	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
