Реализована логика работы с курьерами и заказами

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,3 +52,9 @@ minio:
   available-extensions:
     - png
     - jpg
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
